Fix Docker build issues in CI/CD pipeline
- Add Dockerfile in root directory with multi-stage build
- Add .dockerignore to exclude unnecessary files
- Add ECR repository creation step in workflow
- Simplify build to linux/amd64 platform only for faster builds
- Configure AWS secrets script for easier setup

Fixes #docker-build-failure

--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -139,6 +139,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
           
+      - name: Create ECR repository if not exists
+        run: |
+          aws ecr describe-repositories --repository-names cabruca-segmentation --region ${{ env.AWS_REGION }} || \
+          aws ecr create-repository --repository-name cabruca-segmentation --region ${{ env.AWS_REGION }}
+          
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
@@ -166,7 +171,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
 
   # ============================================
   # Deploy Infrastructure
