--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -164,6 +164,7 @@ jobs:
             
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
+        timeout-minutes: 10
         with:
           context: .
           push: true
@@ -172,6 +173,8 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64
+          build-args: |
+            BUILDKIT_INLINE_CACHE=1
 
   # ============================================
   # Deploy Infrastructure
